@@ -16,14 +16,17 @@
  */
 package org.graylog2.rest.resources.users;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableSet;
+import jakarta.ws.rs.BadRequestException;
 import jakarta.ws.rs.ForbiddenException;
 import jakarta.ws.rs.core.Response;
+import org.apache.shiro.authz.permission.WildcardPermission;
 import org.apache.shiro.mgt.DefaultSecurityManager;
 import org.apache.shiro.subject.Subject;
 import org.bson.types.ObjectId;
+import org.graylog.security.UserContext;
 import org.graylog.security.authservice.GlobalAuthServiceConfig;
-import org.graylog.testing.mongodb.MongoDBInstance;
 import org.graylog2.Configuration;
 import org.graylog2.configuration.HttpConfiguration;
 import org.graylog2.database.NotFoundException;
@@ -32,7 +35,7 @@ import org.graylog2.plugin.cluster.ClusterConfigService;
 import org.graylog2.plugin.database.ValidationException;
 import org.graylog2.plugin.database.users.User;
 import org.graylog2.rest.models.users.requests.CreateUserRequest;
-import org.graylog2.rest.models.users.requests.Startpage;
+import org.graylog2.rest.models.users.requests.DashboardStartPage;
 import org.graylog2.rest.models.users.requests.UpdateUserPreferences;
 import org.graylog2.rest.models.users.responses.Token;
 import org.graylog2.security.AccessToken;
@@ -42,12 +45,14 @@ import org.graylog2.security.MongoDBSessionService;
 import org.graylog2.security.PasswordAlgorithmFactory;
 import org.graylog2.security.UserSessionTerminationService;
 import org.graylog2.security.hashing.SHA1HashPasswordAlgorithm;
+import org.graylog2.shared.bindings.providers.ObjectMapperProvider;
 import org.graylog2.shared.security.Permissions;
 import org.graylog2.shared.security.RestPermissions;
 import org.graylog2.shared.users.Role;
 import org.graylog2.shared.users.UserManagementService;
 import org.graylog2.shared.users.UserService;
 import org.graylog2.users.PaginatedUserService;
+import org.graylog2.users.PasswordComplexityConfig;
 import org.graylog2.users.RoleService;
 import org.graylog2.users.UserConfiguration;
 import org.graylog2.users.UserImpl;
@@ -71,12 +76,14 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.graylog2.shared.security.RestPermissions.USERS_TOKENCREATE;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isA;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
@@ -94,12 +101,10 @@ public class UsersResourceTest {
     private static final String TOKEN_NAME = "tokenName";
 
     private static final String ADMIN_OBJECT_ID = new ObjectId().toHexString();
+    public static final String ALLOWED_ROLE_LOWER_CASE = TestUsersResource.ALLOWED_ROLE.toLowerCase(Locale.US);
 
     @Rule
     public MockitoRule rule = MockitoJUnit.rule();
-
-    @Rule
-    public final MongoDBInstance mongodb = MongoDBInstance.createForClass();
 
     @Mock
     private UsersResource usersResource;
@@ -113,8 +118,6 @@ public class UsersResourceTest {
     private RoleService roleService;
     @Mock
     private MongoDBSessionService sessionService;
-    @Mock
-    private Startpage startPage;
     @Mock
     private Subject subject;
     @Mock
@@ -137,6 +140,8 @@ public class UsersResourceTest {
         usersResource = new TestUsersResource(userManagementService, paginatedUserService, accessTokenService,
                 roleService, sessionService, new HttpConfiguration(), subject,
                 sessionTerminationService, securityManager, globalAuthServiceConfig, clusterConfigService, userService);
+        lenient().when(clusterConfigService.getOrDefault(PasswordComplexityConfig.class, PasswordComplexityConfig.DEFAULT)).thenReturn(PasswordComplexityConfig.DEFAULT);
+        lenient().when(clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES)).thenReturn(UserConfiguration.DEFAULT_VALUES);
     }
 
     /**
@@ -147,25 +152,92 @@ public class UsersResourceTest {
     public void createSuccess() throws ValidationException, NotFoundException {
         Role role = mock(Role.class);
         when(role.getId()).thenReturn(new ObjectId().toHexString());
-        when(roleService.loadAllLowercaseNameMap()).thenReturn(Map.of(TestUsersResource.ALLOWED_ROLE.toLowerCase(Locale.US), role));
-        when(userManagementService.create()).thenReturn(userImplFactory.create(new HashMap<>()));
+        when(role.getName()).thenReturn(TestUsersResource.ALLOWED_ROLE);
+
+        when(roleService.loadAllLowercaseNameMap()).thenReturn(Map.of(ALLOWED_ROLE_LOWER_CASE, role));
         when(clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES)).thenReturn(UserConfiguration.DEFAULT_VALUES);
+        when(userManagementService.create()).thenReturn(userImplFactory.create(new HashMap<>()));
 
         final var creator = userImplFactory.create(Map.of(UserImpl.USERNAME, "creator"));
         when(userService.loadById("creator")).thenReturn(creator);
         when(subject.getPrincipal()).thenReturn(creator.getName());
 
-        final Response response = usersResource.create(buildCreateUserRequest(List.of(TestUsersResource.ALLOWED_ROLE)));
+        final Response response = usersResource.create(buildCreateUserRequest(List.of(TestUsersResource.ALLOWED_ROLE), PASSWORD));
         Assert.assertEquals(201, response.getStatus());
         verify(userManagementService).create(isA(UserImpl.class), eq(creator));
     }
 
     @Test
-    public void createFailureOnMissingRoleAssignPermission() throws ValidationException {
+    public void failOnUnallowedRoleAssignment() throws NotFoundException {
+        Role readerRole = mock(Role.class);
+        when(readerRole.getId()).thenReturn(new ObjectId().toHexString());
+        when(readerRole.getName()).thenReturn(TestUsersResource.ALLOWED_ROLE);
+
+        String forbiddenRole = "ADMIN";
+        Role adminRole = mock(Role.class);
+        when(adminRole.getId()).thenReturn(new ObjectId().toHexString());
+        when(adminRole.getName()).thenReturn("admin");
+
+        when(roleService.loadAllLowercaseNameMap()).thenReturn(Map.of(ALLOWED_ROLE_LOWER_CASE, readerRole, "admin", adminRole));
+        when(userManagementService.create()).thenReturn(userImplFactory.create(new HashMap<>()));
+        when(clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES)).thenReturn(UserConfiguration.DEFAULT_VALUES);
+
+        ForbiddenException exception = assertThrows(ForbiddenException.class, () -> usersResource.create(buildCreateUserRequest(List.of(TestUsersResource.ALLOWED_ROLE, forbiddenRole), PASSWORD)));
+        Assert.assertTrue(exception.getMessage().contains("Not authorized to access resource id <admin>"));
+    }
+
+    @Test
+    public void failOnUnallowedRoleUnAssignment() throws NotFoundException {
+        Role readerRole = mock(Role.class);
+        ObjectId readerRoleId = new ObjectId();
+        when(readerRole.getId()).thenReturn(readerRoleId.toHexString());
+        when(readerRole.getName()).thenReturn(TestUsersResource.ALLOWED_ROLE);
+
+        Role adminRole = mock(Role.class);
+        ObjectId adminRoleId = new ObjectId();
+        when(adminRole.getId()).thenReturn(adminRoleId.toHexString());
+        when(adminRole.getName()).thenReturn("ADMIN");
+
+        when(roleService.loadAllLowercaseNameMap()).thenReturn(Map.of(ALLOWED_ROLE_LOWER_CASE, readerRole, "admin", adminRole));
+
+        when(clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES)).thenReturn(UserConfiguration.DEFAULT_VALUES);
+        when(userManagementService.create()).thenReturn(userImplFactory.create(Map.of(UserImpl.ROLES, List.of(readerRoleId, adminRoleId))));
+
+        final var creator = userImplFactory.create(Map.of(UserImpl.USERNAME, "creator"));
+        when(userService.loadById("creator")).thenReturn(creator);
+        when(subject.getPrincipal()).thenReturn(creator.getName());
+
+        ForbiddenException exception = assertThrows(ForbiddenException.class, () -> usersResource.create(buildCreateUserRequest(List.of(), PASSWORD)));
+        Assert.assertTrue(exception.getMessage().contains("Not authorized to access resource id <ADMIN>"));
+    }
+
+    @Test
+    public void createFailureOnWrongRoleAssignPermission() {
         String testRole = "forbiddenRole";
         when(userManagementService.create()).thenReturn(userImplFactory.create(new HashMap<>()));
         when(clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES)).thenReturn(UserConfiguration.DEFAULT_VALUES);
-        assertThrows(ForbiddenException.class, () -> usersResource.create(buildCreateUserRequest(List.of(testRole))));
+        assertThrows(BadRequestException.class, () -> usersResource.create(buildCreateUserRequest(List.of(testRole), PASSWORD)));
+    }
+
+    @Test
+    public void createFailurePasswordLength() {
+        assertThrows(BadRequestException.class, () -> usersResource.create(buildCreateUserRequest(Collections.emptyList(), "pW1&")));
+    }
+
+    @Test
+    public void createFailurePasswordCasing() {
+        when(clusterConfigService.getOrDefault(PasswordComplexityConfig.class, PasswordComplexityConfig.DEFAULT)).thenReturn(new PasswordComplexityConfig(
+                6, true, false, false, false
+        ));
+        assertThrows(BadRequestException.class, () -> usersResource.create(buildCreateUserRequest(Collections.emptyList(), "lowercase1&")));
+    }
+
+    @Test
+    public void createFailurePasswordSpecialChars() {
+        when(clusterConfigService.getOrDefault(PasswordComplexityConfig.class, PasswordComplexityConfig.DEFAULT)).thenReturn(new PasswordComplexityConfig(
+                6, false, false, false, true
+        ));
+        assertThrows(BadRequestException.class, () -> usersResource.create(buildCreateUserRequest(Collections.emptyList(), "passWORD123")));
     }
 
     @Test
@@ -201,7 +273,6 @@ public class UsersResourceTest {
             assertEquals(expected, actual);
         } finally {
             verify(subject).isPermitted(USERS_TOKENCREATE + ":" + USERNAME);
-            //Before calling the service, the configuration for the default TTL is already loaded in the resource:
             verify(accessTokenService).create(USERNAME, UsersResourceTest.TOKEN_NAME, PeriodDuration.of(Duration.ofDays(30)));
             verify(clusterConfigService).getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES);
             verifyNoMoreInteractions(clusterConfigService, accessTokenService);
@@ -271,11 +342,50 @@ public class UsersResourceTest {
         }
     }
 
-    private CreateUserRequest buildCreateUserRequest(List<String> roles) {
-        return CreateUserRequest.create(USERNAME, PASSWORD, EMAIL,
+    @Test
+    public void getByIdUserWithAdditionalUserIdPermissions() {
+        String alice = "alice";
+        String bob = "bob";
+        String unknown = "unknown";
+        List<WildcardPermission> permissions = List.of(
+                new WildcardPermission(RestPermissions.USERS_EDIT + ":" + alice),
+                new WildcardPermission(RestPermissions.USERS_EDIT + ":" + bob),
+                new WildcardPermission(RestPermissions.USERS_EDIT + ":" + unknown),
+                new WildcardPermission("streams:read:12345"),
+                new WildcardPermission("streams:read")
+        );
+        User userAlice = setupUser(alice, permissions);
+        User userBob = userImplFactory.create(Map.of(UserImpl.USERNAME, bob));
+        when(userManagementService.load(bob)).thenReturn(userBob);
+
+        assertThat(usersResource.getbyId(userAlice.getId(), new UserContext(userAlice.getId(), subject, userService)).permissions().stream()
+                .map(Object::toString).toList())
+                .contains("users:edit:" + alice,
+                        "users:edit:" + bob,
+                        "users:edit:" + unknown,
+                        "streams:read:12345",
+                        "streams:read",
+                        "users:edit:" + userAlice.getId(),
+                        "users:edit:" + userBob.getId())
+                .hasSize(permissions.size() + 2);
+    }
+
+    private User setupUser(String username, List<WildcardPermission> basePerms) {
+        User user = userImplFactory.create(Map.of(UserImpl.USERNAME, username));
+        String userId = user.getId();
+        when(subject.isPermitted(RestPermissions.USERS_EDIT + ":" + username)).thenReturn(true);
+        when(userManagementService.loadById(userId)).thenReturn(user);
+        when(userService.loadById(userId)).thenReturn(user);
+        when(userManagementService.getWildcardPermissionsForUser(user)).thenReturn(basePerms);
+        when(userManagementService.getGRNPermissionsForUser(user)).thenReturn(List.of());
+        return user;
+    }
+
+    private CreateUserRequest buildCreateUserRequest(List<String> roles, String password) {
+        return CreateUserRequest.create(USERNAME, password, EMAIL,
                 FIRST_NAME, LAST_NAME, Collections.singletonList(""),
                 TIMEZONE, SESSION_TIMEOUT,
-                startPage, roles, false);
+                new DashboardStartPage("dashboard-id"), roles, false);
     }
 
     private Token createTokenAndPrepareMocks(Map<String, Object> owningUser, Map<String, Object> callingUser, boolean isAdmin) {
@@ -334,7 +444,7 @@ public class UsersResourceTest {
      */
     public static class TestUsersResource extends UsersResource {
 
-        private static final String ALLOWED_ROLE = "allowed_role";
+        private static final String ALLOWED_ROLE = "READER";
         private final Subject subject;
 
         public TestUsersResource(UserManagementService userManagementService, PaginatedUserService paginatedUserService,
@@ -357,7 +467,7 @@ public class UsersResourceTest {
 
         @Override
         protected void checkPermission(String permission, String instanceId) {
-            if (permission.equals(RestPermissions.ROLES_EDIT) && instanceId.equals(ALLOWED_ROLE)) {
+            if (permission.equals(RestPermissions.ROLES_ASSIGN) && instanceId.equals(ALLOWED_ROLE)) {
                 return;
             }
             super.checkPermission(permission, instanceId);
@@ -368,22 +478,24 @@ public class UsersResourceTest {
         private final Permissions permissions;
         private final PasswordAlgorithmFactory passwordAlgorithmFactory;
         private final ClusterConfigService configService;
+        private final ObjectMapper objectMapper;
 
         public UserImplFactory(Configuration configuration, Permissions permissions, ClusterConfigService configService) {
             this.permissions = permissions;
             this.configService = configService;
             this.passwordAlgorithmFactory = new PasswordAlgorithmFactory(Collections.emptyMap(),
                     new SHA1HashPasswordAlgorithm("TESTSECRET"));
+            this.objectMapper = new ObjectMapperProvider().get();
         }
 
         @Override
         public UserImpl create(Map<String, Object> fields) {
-            return new UserImpl(passwordAlgorithmFactory, permissions, configService, fields);
+            return new UserImpl(passwordAlgorithmFactory, permissions, configService, objectMapper, fields);
         }
 
         @Override
         public UserImpl create(ObjectId id, Map<String, Object> fields) {
-            return new UserImpl(passwordAlgorithmFactory, permissions, configService, id, fields);
+            return new UserImpl(passwordAlgorithmFactory, permissions, configService, objectMapper, id, fields);
         }
 
         // Not used.
